Fix overflow issues in section 1 of item.blade.php

--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -1175,3 +1175,10 @@ h6 {
         border-bottom-left-radius: 0 !important;
     }
 }
+
+// Add ellipsis to overflowing text
+.overflow-ellipsis {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
